--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "sass": "~1.32",
+        "sass-loader": "^12.6.0",
         "vue": "^2.6.14",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.14",
         "vuetify": "^2.6.4",
-        "webpack-cli": "^4.9.2"
+        "webpack-cli": "^4.9.2",
+        "vuetify-loader": "^1.7.0"
     },
     "dependencies": {
         "@casl/ability": "^5.3.1",
